--- a/hospital/templates/order_history.html
+++ b/hospital/templates/order_history.html
@@ -108,7 +108,7 @@
                 <p class='text-muted'>Check these out!
                 <ul class="list-group">
                     <li class="list-group-item list-group-item-light"><a href="{{ url_for('necessary_information') }}">Necessary information</a></li>
-                    <li class="list-group-item list-group-item-light">Announcements</li>
+                    <li class="list-group-item list-group-item-light"><a href="{{ url_for('view_announcement') }}">View announcements</a></li>
                     <li class="list-group-item list-group-item-light">Calendars</li>
                     <li class="list-group-item list-group-item-light">etc</li>
                 </ul>
