--- a/hospital/templates/order_details.html
+++ b/hospital/templates/order_details.html
@@ -89,6 +89,7 @@
                     <td>{{ item.total_price }}</td>
                 </tr>
             {% endfor %}
+            <h4>Total bill: Rs. {{ total }}
             </table>    
             {% for page_num in items.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
             {% if page_num %}
