Medicine database added 17-05-2020

--- a/hospital/templates/medicines.html
+++ b/hospital/templates/medicines.html
@@ -162,13 +162,14 @@
                     </div>    
                 </div>
             </div>
+          </br>
             {% endfor %}
             {% for page_num in medicines.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
             {% if page_num %}
                 {% if medicines.page == page_num %}
-                </br><a class="btn btn-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
+                    <a class="btn btn-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
                 {% else %}
-                </br><a class="btn btn-outline-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
+                    <a class="btn btn-outline-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
                 {% endif %}
             {% else %}
                 ...
