--- a/hospital/templates/doctor_register.html
+++ b/hospital/templates/doctor_register.html
@@ -59,8 +59,20 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
+                    {{ form.description.label(class="form-control-label") }}
+                    {% if form.description.errors %}
+                        {{ form.description(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.description.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.description(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
                     {{ form.consultation_fee.label(class="form-control-label") }}
-
                     {% if form.consultation_fee.errors %}
                         {{ form.consultation_fee(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
