Updated doctors list 18-05-2020

--- a/hospital/templates/home.html
+++ b/hospital/templates/home.html
@@ -463,6 +463,7 @@
                 </div><!-- end col -->
 
             </div><!-- end row -->
+            <a href="{{ url_for('all_doctors') }}" class="card-text" style="text-align: center;">See the full doctors list</a>
         </div><!-- end container -->
     </div>
 	  
