Updated bug fixes first-order 18-05-2020

--- a/hospital/templates/all_doctors.html
+++ b/hospital/templates/all_doctors.html
@@ -89,7 +89,7 @@
                 <td><a href="{{ url_for('doctor_description', doctor_id=doctor.id) }}" class="card-text" style="text-align: center;">{{ doctor.username }}</a></td>
                   <td>{{ doctor.specialist }}</td>
                   <td>{{ doctor.location }}</td>
-                  <td>{{ doctor.consultancy_fee }}</td>
+                  <td>{{ doctor.consultation_fee }}</td>
                 </tr>
             {% endfor %}
           </table>
