--- a/hospital/templates/view_cart.html
+++ b/hospital/templates/view_cart.html
@@ -112,7 +112,7 @@
             {% endif %}
           {% endfor %}
           </br>
-          {% if flag  %}
+          {% if flag == 1 %}
           <h5>Grand Total:  Rs.{{ grand_total }}</h5>&nbsp;&nbsp;&nbsp;&nbsp; <h5>Check out:  Rs.{{ grand_total*0.7 }} (-30%)</h5>
           {% else %}
           <h5>Grand Total:  Rs.{{ grand_total }}</h5>&nbsp;&nbsp;&nbsp;&nbsp; <h5>Check out:  Rs.{{ grand_total*0.8 }} (-20%)</h5>
