--- a/hospital/templates/chat.html
+++ b/hospital/templates/chat.html
@@ -26,7 +26,7 @@
 
             <!-- Nav bar start -->
             <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #66a1ee">
-
+                <a class="navbar-brand mr-4 ml-4" href="{{ url_for('home') }}">Life Care</a>
                 <div class="container-fluid">
                     <div id="show-sidebar-button" class="cursor-pointer">
                         <i class="fas fa-plus-circle "></i>
