--- a/hospital/templates/show_booked_appointments.html
+++ b/hospital/templates/show_booked_appointments.html
@@ -40,7 +40,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Life Care</a>
+          <a class="navbar-brand mr-4" href="/">Life Care</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -74,61 +74,58 @@
                 </div>
               {% endfor %}
             {% endif %}
-          {% endwith %}        
-          <h4 class="mb-4">Appointments booked by {{ user.username }} ({{ appointments.total }})</h4>
-          <table style="width: 100%;">
-            <tr>
-                <th style="width: 140px; text-align: center;">Doctor</th>
-                <th>Specialist</th>
-                <th style="width: 170px; text-align: center;">Booked on</th>
-                <th style="width: 170px; text-align:center;">Booked for</th>
-                <th style="width: 100px; text-align: center;">Visit fee</th>
-                <th style="width: 140px; text-align: center;">Update or delete</th>
-                <th style="width: 140px; text-align: center;">Eprescription</th>
-            </tr>
-          {% for appointment in appointments.items %}
-            <tr>
-                <td><a href="{{ url_for('doctor_description', doctor_id=appointment.doctor.id) }}">{{ appointment.doctor.username }}</a></td>
-                <td>{{ appointment.doctor.specialist }}</td>
-                <td>{{ appointment.booked_on.strftime('%b-%d-%Y %I:%M%p') }}</td>
-                <td style="width: 220px;">{{ appointment.booked_for.strftime('%b-%d-%Y') }}</br> {{ appointment.booked_for_time }} </td>
-                <td>{{ appointment.doctor.consultation_fee }}</td>
-                {% if appointment.booked_for > now %}
-                <td><a class="article-title" href="{{ url_for('appointment', appointment_id=appointment.id) }}">Click here</a></td>
-                {% else %}
-                <td>You cannot update today's or previous appointments</td>
-                {% endif %}
-                <td><a class="article-title" href="{{ url_for('user_e_prescription', prescription_id=appointment.id) }}">Click here</a></td>
-            </tr> 
-          {% endfor %}
-        </table>
-          {% for page_num in appointments.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+          {% endwith %}  
+          <a class="btn btn-secondary btn-sm mt-3 mb-3" href="{{ url_for('doc_appointment_history', username=current_user.username) }}">All appointments</a>
+          <a class="btn btn-secondary btn-sm mt-3 mb-3 ml-3" href="{{ url_for('appointment_history_by_date') }}">Check appointments by date</a>
+          {% if flag %}      
+          <h3 class="mb-4">Appointments booked with {{ doctor.username }} on {{ date.strftime("%d-%m-%Y") }} ({{ appointments.total }})</h3>   
+            <table>
+                <tr>
+                  <th>Patient</th>
+                  <th>Booked on</th>
+                  <th>Booked for</th>
+                  <th>E-prescription</th>
+                </tr>
+            
+            {% for appointment in appointments.items %}
+                <tr>
+                    <td>{{ appointment.user.username }}</td>
+                    <td>{{ appointment.booked_on.strftime('%b-%d %I:%M%p') }}</td>
+                    <td>{{ appointment.booked_for.strftime('%d-%m-%Y') }} &nbsp; {{ appointment.booked_for_time }}</td>
+                    <td><a class="article-title" href="{{ url_for('doc_e_prescription', prescription_id=appointment.id) }}">Click here</a></td>
+                </tr>
+            {% endfor %}
+            </table>    
+            {% for page_num in appointments.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
             {% if page_num %}
-              {% if appointments.page == page_num %}
-                <a class="btn btn-info mb-4 mt-2" href="{{ url_for('appointment_history', username=user.username, page=page_num) }}">{{ page_num }}</a>
-              {% else %}
-                <a class="btn btn-outline-info mb-4 mt-2" href="{{ url_for('appointment_history', username=user.username, page=page_num) }}">{{ page_num }}</a>
-              {% endif %}
+                {% if appointments.page == page_num %}
+                <a class="btn btn-info mb-4 mt-2" href="{{ url_for('doc_appointment_history', username=doctor.username, page=page_num) }}">{{ page_num }}</a>
+                {% else %}
+                <a class="btn btn-outline-info mb-4 mt-2" href="{{ url_for('doc_appointment_history', username=doctor.username, page=page_num) }}">{{ page_num }}</a>
+                {% endif %}
             {% else %}
-              ...
+                ...
             {% endif %}
-          {% endfor %}
+            {% endfor %}
+            {% else %}
+            <h5>You don't have any appointments booked on this day.</h5>
+            {% endif %}
+            </div>
+            <div class="col-md-4">
+            <div class="content-section">
+                <h3>Our Sidebar</h3>
+                <p class='text-muted'>Check these out!
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-light"><a href="{{ url_for('necessary_information') }}">Necessary information</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{{ url_for('view_announcement') }}">View announcements</a></li>
+                    <li class="list-group-item list-group-item-light">Calendars</li>
+                    <li class="list-group-item list-group-item-light">etc</li>
+                </ul>
+                </p>
+            </div>
+            </div>
         </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>Check these out!
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light"><a href="{{ url_for('necessary_information') }}">Necessary information</a></li>
-                <li class="list-group-item list-group-item-light"><a href="{{ url_for('view_announcement') }}">View announcements</a></li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-              </ul>
-            </p>
-          </div>
-        </div>
-      </div>
-      </main>
+        </main>
 
 
 <!-- Optional JavaScript -->
