--- a/hospital/templates/check_appointment_history_by_date.html
+++ b/hospital/templates/check_appointment_history_by_date.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-<a class="btn btn-secondary btn-sm mt-3 mb-4" href="{{ url_for('doc_appointment_history', username=current_user.username) }}">All appointments</a>
+<a class="btn btn-secondary btn-sm mt-3 mb-4" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('doc_appointment_history', username=current_user.username) }}">All appointments</a>
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
+                <legend class="border-bottom mb-4">Appointments</legend>
                 <div class="form-group">
                     {{ form.date.label(class="form-control-label") }}
                     {% if form.date.errors %}
