--- a/hospital/templates/layout.html
+++ b/hospital/templates/layout.html
@@ -14,16 +14,16 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     
     {% if title %}
-        <title>Hospital - {{ title }}</title>
+        <title>Life care - {{ title }}</title>
     {% else %}
-        <title>Hospital</title>
+        <title>Life care</title>
     {% endif %}
 </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Hospital</a>
+          <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Life care</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
