--- a/hospital/templates/show_booked_appointments.html
+++ b/hospital/templates/show_booked_appointments.html
@@ -75,8 +75,8 @@
               {% endfor %}
             {% endif %}
           {% endwith %}  
-          <a class="btn btn-secondary btn-sm mt-3 mb-3" href="{{ url_for('doc_appointment_history', username=current_user.username) }}">All appointments</a>
-          <a class="btn btn-secondary btn-sm mt-3 mb-3 ml-3" href="{{ url_for('appointment_history_by_date') }}">Check appointments by date</a>
+          <a class="btn btn-secondary btn-sm mt-3 mb-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('doc_appointment_history', username=current_user.username) }}">All appointments</a>
+          <a class="btn btn-secondary btn-sm mt-3 mb-3 ml-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('appointment_history_by_date') }}">Check appointments by date</a>
           {% if flag %}      
           <h3 class="mb-4">Appointments booked with {{ doctor.username }} on {{ date.strftime("%d-%m-%Y") }} ({{ appointments.total }})</h3>   
             <table>
