--- a/hospital/templates/chat.html
+++ b/hospital/templates/chat.html
@@ -26,7 +26,7 @@
 
             <!-- Nav bar start -->
             <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #66a1ee">
-                <a class="navbar-brand mr-4 ml-4" href="{{ url_for('home') }}">Life Care</a>
+                <a class="navbar-brand mr-4 ml-4" href="{{ url_for('home') }}" style="color:white">Life Care</a>
                 <div class="container-fluid">
                     <div id="show-sidebar-button" class="cursor-pointer">
                         <i class="fas fa-plus-circle "></i>
@@ -39,7 +39,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a id="logout-btn" class="nav-link" href="{{ url_for('logout') }}"><span style="color: #335177">Logout</span></a>
+                                <a id="logout-btn" class="nav-link" href="{{ url_for('logout') }}"><span style="color: white">Logout</span></a>
                             </li>
                         </ul>
                     </div>
