--- a/hospital/templates/important_blood_bank_contacts.html
+++ b/hospital/templates/important_blood_bank_contacts.html
@@ -75,7 +75,9 @@
               {% endfor %}
             {% endif %}
           {% endwith %} 
-          <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('important_hospital_contacts') }}">Hospital Contacts</a> </br></br>   
+          <a class="btn btn-secondary btn-sm mt-2 mb-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('nearby_bloodbank_map') }}">Blood Banks near me</a> 
+          <a class="btn btn-secondary btn-sm mt-2 mb-3 ml-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('important_hospital_contacts') }}">Hospital Contacts</a> 
+
             <h3 class="mb-4">Blood banks in Kolkata and their contact numbers</h3> 
             <table>
               <tr>
