--- a/hospital/templates/view_cart.html
+++ b/hospital/templates/view_cart.html
@@ -90,11 +90,11 @@
             </tr>
           {% for item in cartitems.items %}
             <tr>
-                <td>{{ item.medicine_id }}</td>
+                <td style="text-align: center">{{ item.medicine_id }}</td>
                 <td><img class="img-rounded" src="{{ url_for('static', filename='images/meds/' + item.medicine.image_file) }}"></td>
                 <td>{{ item.medicine.name }}</td>
                 <td>{{ item.medicine.price }}</td>
-                <td>{{ item.quantity }}</td>
+                <td style="text-align: center">{{ item.quantity }}</td>
                 <td><a class="article-title" href="{{ url_for('cart', item_id=item.id) }}">Click here</a></td>
                 <td>{{ item.total_price }}</td>
             </tr> 
@@ -113,11 +113,11 @@
           {% endfor %}
           </br>
           {% if flag == 1 %}
-          <h5>Grand Total:  Rs.{{ grand_total }}</h5>&nbsp;&nbsp;&nbsp;&nbsp; <h5>Check out:  Rs.{{ grand_total*0.7 }} (-30%)</h5>
+          <h5 style="display: inline">Grand Total:  Rs.{{ '%0.2f'%(grand_total) }}</h5>&nbsp;&nbsp;&nbsp;&nbsp; <h5 style="display: inline">Check out:  Rs.{{ '%0.2f'%(grand_total*0.7) }} (-30%)</h5>
           {% else %}
-          <h5>Grand Total:  Rs.{{ grand_total }}</h5>&nbsp;&nbsp;&nbsp;&nbsp; <h5>Check out:  Rs.{{ grand_total*0.8 }} (-20%)</h5>
+          <h5 style="display:inline">Grand Total:  Rs.{{ '%0.2f'%(grand_total) }}</h5>&nbsp;&nbsp;&nbsp;&nbsp; <h5 style="display: inline">Check out:  Rs.{{ '%0.2f'%(grand_total*0.8) }} (-20%)</h5>
           {% endif %}
-            </br><a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('place_order') }}">Place Order</a>
+            </br><a class="btn btn-secondary btn-sm mt-3 mb-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('place_order') }}">Place Order</a>
         </div>
         <div class="col-md-4">
           <div class="content-section">
